--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-<h1>My Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Deepak Kumar</h1>
+      <p>Web Developer | Designer | Tech Enthusiast</p>
+    </div>
+  </header>
+
+  <nav>
+    <div class="container">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+
+  <section id="about" class="section">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        Hello! I’m Deepak, a passionate web developer who loves creating clean, responsive, and user-friendly websites.
+        I enjoy learning new technologies and improving my design & coding skills every day.
+      </p>
+    </div>
+  </section>
+
+  <section id="skills" class="section">
+    <div class="container">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>HTML5 & CSS3</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>React.js</li>
+        <li>Git & GitHub</li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="projects" class="section">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="projects">
+        <div class="project-card">
+          <h3>Portfolio Website</h3>
+          <p>A responsive personal website showcasing my projects and skills.</p>
+        </div>
+        <div class="project-card">
+          <h3>E-Commerce Recommender</h3>
+          <p>A machine learning-based recommendation system for online shopping.</p>
+        </div>
+        <div class="project-card">
+          <h3>AI Search Algorithms</h3>
+          <p>Implemented BFS and DFS algorithms in Python for AI pathfinding.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>📧 Email: <a href="mailto:deepak@example.com">deepak@example.com</a></p>
+      <p>🔗 GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
+      <p>💼 LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Deepak Kumar | Built with 💙 using HTML & CSS</p>
+  </footer>
+</body>
+</html>
