--- a/index.html
+++ b/index.html
@@ -3,80 +3,185 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <header>
-    <div class="container">
-      <h1>Deepak Kumar</h1>
-      <p>Web Developer | Designer | Tech Enthusiast</p>
-    </div>
-  </header>
+  <title>Deepak Kumar | Portfolio</title>
+  <style>
+    /* ====== Global Styles ====== */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Poppins", sans-serif;
+    }
 
-  <nav>
-    <div class="container">
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </div>
-  </nav>
+    body {
+      background-color: #f9fafc;
+      color: #222;
+      line-height: 1.6;
+      scroll-behavior: smooth;
+    }
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        Hello! I’m Deepak, a passionate web developer who loves creating clean, responsive, and user-friendly websites.
-        I enjoy learning new technologies and improving my design & coding skills every day.
-      </p>
-    </div>
-  </section>
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
 
-  <section id="skills" class="section">
-    <div class="container">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>HTML5 & CSS3</li>
-        <li>JavaScript</li>
-        <li>Python</li>
-        <li>React.js</li>
-        <li>Git & GitHub</li>
-      </ul>
-    </div>
-  </section>
+    img {
+      max-width: 100%;
+      border-radius: 10px;
+    }
 
-  <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <div class="projects">
-        <div class="project-card">
-          <h3>Portfolio Website</h3>
-          <p>A responsive personal website showcasing my projects and skills.</p>
-        </div>
-        <div class="project-card">
-          <h3>E-Commerce Recommender</h3>
-          <p>A machine learning-based recommendation system for online shopping.</p>
-        </div>
-        <div class="project-card">
-          <h3>AI Search Algorithms</h3>
-          <p>Implemented BFS and DFS algorithms in Python for AI pathfinding.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+    /* ====== Header ====== */
+    header {
+      background: linear-gradient(135deg, #0f62fe, #0050e0);
+      color: #fff;
+      text-align: center;
+      padding: 4rem 1rem;
+    }
 
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>📧 Email: <a href="mailto:deepak@example.com">deepak@example.com</a></p>
-      <p>🔗 GitHub: <a href="https://github.com/your-username" target="_blank">github.com/your-username</a></p>
-      <p>💼 LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/your-profile</a></p>
-    </div>
-  </section>
+    header h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.5rem;
+    }
 
-  <footer>
-    <p>© 2025 Deepak Kumar | Built with 💙 using HTML & CSS</p>
-  </footer>
-</body>
-</html>
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.9;
+    }
+
+    /* ====== Navbar ====== */
+    nav {
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    nav ul {
+      display: flex;
+      justify-content: center;
+      list-style: none;
+      padding: 0.8rem 0;
+      gap: 2rem;
+    }
+
+    nav a {
+      color: #333;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #0f62fe;
+    }
+
+    /* ====== Sections ====== */
+    section {
+      padding: 4rem 1rem;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2.section-title {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #0f62fe;
+      position: relative;
+    }
+
+    h2.section-title::after {
+      content: "";
+      display: block;
+      width: 60px;
+      height: 3px;
+      background: #0f62fe;
+      margin: 0.5rem auto 0;
+      border-radius: 5px;
+    }
+
+    /* ====== About ====== */
+    .about-content {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 2rem;
+      text-align: left;
+    }
+
+    .about-text {
+      flex: 1 1 300px;
+    }
+
+    .about-img {
+      flex: 1 1 250px;
+      text-align: center;
+    }
+
+    .about-img img {
+      width: 200px;
+      border-radius: 50%;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    /* ====== Skills ====== */
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1rem;
+      text-align: center;
+    }
+
+    .skill {
+      background: #fff;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      font-weight: 500;
+      transition: transform 0.2s ease;
+    }
+
+    .skill:hover {
+      transform: scale(1.05);
+    }
+
+    /* ====== Projects ====== */
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .project-card {
+      background: #fff;
+      border-radius: 10px;
+      padding: 1.5rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease;
+    }
+
+    .project-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .project-card h3 {
+      color: #0f62fe;
+      margin-bottom: 0.5rem;
+    }
+
+    .project-card p {
+      font-size: 0.95rem;
+    }
+
+    /* ====== Contact ====== */
+    .contact-info {
+      text-align: center;
+      font-size: 1.1rem;
+    }
+
+    .contact-info p {
+      margi
