--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deepak Kumar | Portfolio</title>
+  <title>KOTHA DEEPAK REDDY | Portfolio</title>
   <style>
     /* ====== Global Styles ====== */
     * {
@@ -184,4 +184,117 @@
     }
 
     .contact-info p {
-      margi
+      margin: 0.6rem 0;
+    }
+
+    .contact-info a {
+      color: #0f62fe;
+      font-weight: 500;
+    }
+
+    /* ====== Footer ====== */
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      background: #0f62fe;
+      color: white;
+      font-size: 0.9rem;
+      margin-top: 2rem;
+    }
+
+    /* ====== Responsive ====== */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2.2rem;
+      }
+      nav ul {
+        flex-wrap: wrap;
+        gap: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Deepak Kumar</h1>
+    <p>Web Developer • Designer • Problem Solver</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <section id="about">
+    <div class="container about-content">
+      <div class="about-img">
+        <img src="https://via.placeholder.com/200" alt="Profile Picture">
+      </div>
+      <div class="about-text">
+        <h2 class="section-title">About Me</h2>
+        <p>
+          I’m <strong>Deepak Reddy</strong>, a web developer passionate about building interactive, user-friendly, and efficient digital experiences. I specialize in front-end development using modern web technologies.
+        </p>
+        <p>
+          I aim to create products that not only look good but also perform seamlessly. My goal is to continuously learn and contribute to projects that make a real impact.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section id="skills">
+    <div class="container">
+      <h2 class="section-title">Skills</h2>
+      <div class="skills-grid">
+        <div class="skill">HTML5</div>
+        <div class="skill">CSS3</div>
+        <div class="skill">JavaScript</div>
+        <div class="skill">React.js</div>
+        <div class="skill">Python</div>
+        <div class="skill">Git & GitHub</div>
+        <div class="skill">Node.js</div>
+        <div class="skill">SQL</div>
+      </div>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <h2 class="section-title">Projects</h2>
+      <div class="projects-grid">
+        <div class="project-card">
+          <h3>Portfolio Website</h3>
+          <p>A responsive personal website built with HTML, CSS, and JS showcasing my skills and projects.</p>
+        </div>
+        <div class="project-card">
+          <h3>AI Search Algorithms</h3>
+          <p>Implemented BFS, DFS, and A* algorithms for pathfinding visualization using Python.</p>
+        </div>
+        <div class="project-card">
+          <h3>E-Commerce Recommender</h3>
+          <p>A machine learning–based product recommender system developed using Python and Scikit-learn.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <div class="container">
+      <h2 class="section-title">Contact</h2>
+      <div class="contact-info">
+        <p>📧 Email: <a href="mailto:deepak@example.com">deepakry544@example.com</a></p>
+        <p>💼 LinkedIn: <a href="https://linkedin.com/in/your-profile" target="_blank">linkedin.com/in/profile</a></p>
+        <p>🔗 GitHub: <a href="https://github.com/your-username" target="_blank">github.com/DeepakReddy215</a></p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Deepak Reddy — All Rights Reserved</p>
+  </footer>
+</body>
+</html>
