--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </head>
 <body>
   <header>
-    <h1>Deepak Kumar</h1>
+    <h1>Deepak Reddy</h1>
     <p>Web Developer • Designer • Problem Solver</p>
   </header>
 
